--- a/embold.com/css/icons.less
+++ b/embold.com/css/icons.less
@@ -8,3 +8,48 @@
 .ic-cloud-code        { background-image: url('../images/ic-md-cloud-code.svg'); }
 .ic-servers           { background-image: url('../images/ic-md-servers.svg'); }
 .ic-building-big      { background-image: url('../images/ic-md-building-big.svg'); }
+.ic-scan              { background-image: url('../images/ic-md-scan.svg'); }
+.ic-report            { background-image: url('../images/ic-md-report.svg'); }
+.ic-report-wh         { background-image: url('../images/ic-md-report-wh.svg'); }
+.ic-repository-link   { background-image: url('../images/ic-md-repository-link.svg'); }
+.ic-folder-add        { background-image: url('../images/ic-md-folder-add.svg'); }
+.ic-people        { background-image: url('../images/ic-md-people.svg'); }
+.ic-gender        { background-image: url('../images/ic-md-gender.svg'); }
+.ic-office        { background-image: url('../images/ic-md-office.svg'); }
+.ic-flag        { background-image: url('../images/ic-md-flag.svg'); }
+
+
+.ic-logo-deutsche-leasing { background-image: url('../images/ic-logo-deutsche-leasing.svg'); }
+.ic-logo-valeo { background-image: url('../images/ic-logo-valeo.svg'); }
+.ic-logo-digit { background-image: url('../images/ic-logo-digit.svg'); }
+.ic-logo-toyota { background-image: url('../images/ic-logo-toyota.svg'); }
+
+.logo-small-deutsche-leasing { background-image: url('../images/ic-logo-sq-deutsche-leasing.svg'); }
+
+.bg-index-hero { background-image: url('../images/header-index-hero.svg'); z-index: 1; }
+.bg-product-overview { background-image: url('../images/header-sub-product-overview.svg'); }
+.bg-product-features { background-image: url('../images/header-sub-product-features.svg'); }
+.bg-product-use-cases { background-image: url('../images/header-sub-product-use-cases.svg'); }
+.bg-product-pricing { background-image: url('../images/header-sub-product-pricing.svg'); }
+.bg-product-partnership { background-image: url('../images/header-sub-product-partnership.svg'); }
+
+.bg-user-stories-user-roles { background-image: url('../images/header-sub-user-stories-user-roles.svg'); }
+.bg-user-stories-team-size { background-image: url('../images/header-sub-user-stories-team-size.svg'); }
+.bg-user-stories-industry { background-image: url('../images/header-sub-user-stories-industry.svg'); }
+.bg-user-stories-solution-approach { background-image: url('../images/header-sub-user-stories-solution-approach.svg'); }
+
+.bg-resources-product { background-image: url('../images/header-sub-resources-product.svg'); }
+.bg-resources-download { background-image: url('../images/header-sub-resources-download.svg'); }
+.bg-resources-media { background-image: url('../images/header-sub-resources-media.svg'); }
+
+.bg-company-about { background-image: url('../images/header-sub-company-about.svg'); }
+.bg-company-team { background-image: url('../images/header-sub-company-team.svg'); }
+.bg-company-careers { background-image: url('../images/header-sub-company-careers.svg'); }
+.bg-company-news { background-image: url('../images/header-sub-company-news.svg'); }
+
+.il-index-features { background-image: url('../images/illustration-index-features.png'); }
+
+.photo-developer-1 { background-image: url('../images/photo-developer-1.png'); }
+.photo-dev-ops-1 { background-image: url('../images/photo-devOps-1.png'); }
+.photo-manager-1 { background-image: url('../images/photo-manager-1.png'); }
+.photo-member-vishal { background-image: url('../images/photo-member-vishal.png'); }
