--- a/embold.com/css/embold.less
+++ b/embold.com/css/embold.less
@@ -46,6 +46,11 @@
   .background-no-repeat;
 }
 
+.body-illustration {
+  height: 300px;
+  background-size: 70%;
+}
+
 * {
   box-sizing: border-box;
 }
@@ -339,10 +344,8 @@ button:focus {
     margin-top: 14em;
     margin-bottom: 3em;
     padding: 2em;
-    background-color: @white;
     z-index: 20;
     position: relative;
-    .box-shadow;
 
     h1.headcopy {
       margin: 0;
@@ -367,13 +370,13 @@ button:focus {
   }
 
   .header-image {
-    width: 640px;
-    height: 480px;
+    width: 50rem;
+    height: 34rem;
     background-size: cover;
     background-repeat: no-repeat;
     position: absolute;
-    top: 4em;
-    right: 6em;
+    top: 6em;
+    right: 0;
     z-index: 1;
   }
 }
@@ -582,6 +585,11 @@ button:focus {
   }
 }
 
+.il-index-locations {
+  height: 30em;
+  background-size: auto 100%;
+}
+
 .product-pricing {
   margin-top: 0;
   padding-top: 0;
@@ -766,6 +774,7 @@ button:focus {
 .block-section-sub {
   .section-title {
     font-size: 2.3em;
+    margin-top: 0.8em;
   }
 
   .description {
@@ -1089,7 +1098,49 @@ button:focus {
   }
 }
 
-.company-about-status,
+.company-about-status {
+  .block-column {
+    display: inline-block;
+    width: 16em;
+    margin-top: 48px;
+    margin-right: 0.6em;
+    padding-top: 0.4em;
+    padding-right: 0.8em;
+    border-right: 1px solid @gray300;
+
+    .icon {
+      width: 48px;
+      height: 48px;
+      margin-top: 0;
+      margin-right: 0.2em;
+      float: left;
+    }
+
+    .title {
+      color: @gray800;
+      font-size: 1.3em;
+      font-weight: bold;
+      .sofia;
+    }
+
+    .description {
+      font-size: 0.8em;
+    }
+  }
+
+  .block-column:last-of-type {
+    margin-right: 0;
+    padding-right: 0;
+    border-right: 0;
+  }
+
+  .active,
+  .tab-item:hover {
+    color: @white;
+    background-color: @gray800;
+  }
+}
+
 .company-benefit {
   .block-column {
     display: inline-block;
@@ -1106,7 +1157,7 @@ button:focus {
     }
 
     .title {
-      color: @orange800;
+      color: @gray800;
       font-size: 1.3em;
       font-weight: bold;
       .sofia;
