--- a/embold.com/css/icons.less
+++ b/embold.com/css/icons.less
@@ -26,7 +26,7 @@
 
 .logo-small-deutsche-leasing { background-image: url('../images/ic-logo-sq-deutsche-leasing.svg'); }
 
-.bg-index-hero { background-image: url('../images/header-index-hero.svg'); z-index: 1; }
+.bg-index-hero { background-image: url('../images/header-index-hero.png'); }
 .bg-product-overview { background-image: url('../images/header-sub-product-overview.svg'); }
 .bg-product-features { background-image: url('../images/header-sub-product-features.svg'); }
 .bg-product-use-cases { background-image: url('../images/header-sub-product-use-cases.svg'); }
@@ -35,7 +35,7 @@
 
 .bg-user-stories-user-roles { background-image: url('../images/header-sub-user-stories-user-roles.svg'); }
 .bg-user-stories-team-size { background-image: url('../images/header-sub-user-stories-team-size.svg'); }
-.bg-user-stories-industry { background-image: url('../images/header-sub-user-stories-industry.svg'); }
+.bg-user-stories-industry { background-image: url('../images/header-sub-user-stories-industry.png'); }
 .bg-user-stories-solution-approach { background-image: url('../images/header-sub-user-stories-solution-approach.svg'); }
 
 .bg-resources-product { background-image: url('../images/header-sub-resources-product.svg'); }
@@ -47,7 +47,10 @@
 .bg-company-careers { background-image: url('../images/header-sub-company-careers.svg'); }
 .bg-company-news { background-image: url('../images/header-sub-company-news.svg'); }
 
-.il-index-features { background-image: url('../images/illustration-index-features.png'); }
+.il-index-features { background-image: url('../images/il-index-features.png'); }
+.il-index-locations { background-image: url('../images/il-index-locations.png'); }
+.il-product-features-smart-priori { background-image: url('../images/il-product-features-smart-priori.png'); }
+.il-product-features-anti-pattern { background-image: url('../images/il-product-features-anti-pattern.png'); }
 
 .photo-developer-1 { background-image: url('../images/photo-developer-1.png'); }
 .photo-dev-ops-1 { background-image: url('../images/photo-devOps-1.png'); }
