--- a/embold.com/css/icons.less
+++ b/embold.com/css/icons.less
@@ -13,10 +13,11 @@
 .ic-report-wh         { background-image: url('../images/ic-md-report-wh.svg'); }
 .ic-repository-link   { background-image: url('../images/ic-md-repository-link.svg'); }
 .ic-folder-add        { background-image: url('../images/ic-md-folder-add.svg'); }
-.ic-people        { background-image: url('../images/ic-md-people.svg'); }
-.ic-gender        { background-image: url('../images/ic-md-gender.svg'); }
-.ic-office        { background-image: url('../images/ic-md-office.svg'); }
-.ic-flag        { background-image: url('../images/ic-md-flag.svg'); }
+.ic-people            { background-image: url('../images/ic-md-people.svg'); }
+.ic-gender            { background-image: url('../images/ic-md-gender.svg'); }
+.ic-office            { background-image: url('../images/ic-md-office.svg'); }
+.ic-flag              { background-image: url('../images/ic-md-flag.svg'); }
+.ic-coffee            { background-image: url('../images/ic-md-coffee.svg'); }
 
 
 .ic-logo-deutsche-leasing { background-image: url('../images/ic-logo-deutsche-leasing.svg'); }
@@ -49,10 +50,19 @@
 
 .il-index-features { background-image: url('../images/il-index-features.png'); }
 .il-index-locations { background-image: url('../images/il-index-locations.png'); }
+.il-product-overview-ruleless-static { background-image: url('../images/il-product-overview-ruleless-static.png'); }
+.il-product-features-multi-dimension { background-image: url('../images/il-product-features-multi-dimension.png'); }
 .il-product-features-smart-priori { background-image: url('../images/il-product-features-smart-priori.png'); }
 .il-product-features-anti-pattern { background-image: url('../images/il-product-features-anti-pattern.png'); }
 
+.photo-vishal-rai-big { background-image: url('../images/photo-vishal-rai-big.jpg'); }
 .photo-developer-1 { background-image: url('../images/photo-developer-1.png'); }
 .photo-dev-ops-1 { background-image: url('../images/photo-devOps-1.png'); }
 .photo-manager-1 { background-image: url('../images/photo-manager-1.png'); }
 .photo-member-vishal { background-image: url('../images/photo-member-vishal.png'); }
+.photo-company-team-value-1 { background-image: url('../images/photo-company-careers-team-value-1.jpg'); }
+.photo-company-team-value-2 { background-image: url('../images/photo-company-careers-team-value-2.jpg'); }
+.photo-company-team-value-3 { background-image: url('../images/photo-company-careers-team-value-3.jpg'); }
+.photo-office-pune { background-image: url('../images/photo-office-pune.jpg'); }
+.photo-office-frankfurt { background-image: url('../images/photo-office-frankfurt.jpg'); }
+.photo-office-tokyo { background-image: url('../images/photo-office-tokyo.jpg'); }
