--- a/embold.com/css/embold.less
+++ b/embold.com/css/embold.less
@@ -819,8 +819,8 @@ button:focus {
       cursor: pointer;
 
       .tab-item-icon {
-        width: 18px;
-        height: 18px;
+        width: 24px;
+        height: 24px;
         margin-right: 4px;
         .background-no-repeat;
       }
@@ -840,9 +840,10 @@ button:focus {
       background-color: @gray800;
       transition: all 0.5s;
 
-      .ic-sm-user-executive {
-        background-image: url('../images/ic-sm-user-executive-white.svg');
-      }
+      .ic-sm-user-executive { background-image: url('../images/ic-sm-user-executive-wh.svg'); }
+      .ic-sm-user-developer { background-image: url('../images/ic-sm-user-developer-wh.svg'); }
+      .ic-sm-user-architect { background-image: url('../images/ic-sm-user-architect-wh.svg'); }
+      .ic-sm-user-pm { background-image: url('../images/ic-sm-user-pm-wh.svg'); }
     }
   }
 }
@@ -1149,6 +1150,63 @@ button:focus {
   .tab-item:hover {
     color: @white;
     background-color: @gray800;
+  }
+}
+
+.timeline {
+  position: relative;
+
+  .wrap-timeline {
+    width: 100%;
+    overflow: scroll;
+    overflow-y: hidden;
+    border-top: 1px solid @gray400;
+    margin-top: 2.4em;
+    padding-top: 2.4em;
+    padding-bottom: 1em;
+
+    .content-timeline {
+      width: 2700px;
+      height: 480px;
+      background-image: url('../images/timeline-sample.svg');
+      background-size: 50%;
+      background-position: left bottom;
+      background-repeat: no-repeat;
+      .background-no-repeat;
+    }
+  }
+
+  ::-webkit-scrollbar {
+    width: 0;  /* remove scrollbar space */
+    height: 18px;
+    background: @gray200;
+    .transition;
+  }
+  /* optional: show position indicator in red */
+  ::-webkit-scrollbar-thumb {
+    width: 24px;
+    background: @gray400;
+    .transition;
+  }
+  ::-webkit-scrollbar-thumb:hover {
+    background: @orange800;
+    .transition;
+  }
+
+  .arrow-right {
+    width: 48px;
+    height: 48px;
+    top: 23em;
+    right: 0.5em;
+    position: absolute;
+    background-image: url('../images/arrow-light-right.svg');
+    opacity: 0.3;
+    .background-no-repeat;
+    .transition;
+  }
+
+  .arrow-right:hover {
+    opacity: 1;
   }
 }
 
