--- a/embold.com/css/icons.less
+++ b/embold.com/css/icons.less
@@ -1,6 +1,11 @@
-.ic-sm-user-executive {
-  background-image: url('../images/ic-sm-user-executive.svg');
-}
+.ic-sm-user-executive { background-image: url('../images/ic-sm-user-executive.svg'); }
+.ic-sm-user-executive-wh { background-image: url('../images/ic-sm-user-executive-wh.svg'); }
+.ic-sm-user-developer { background-image: url('../images/ic-sm-user-developer.svg'); }
+.ic-sm-user-developer-wh { background-image: url('../images/ic-sm-user-developer-wh.svg'); }
+.ic-sm-user-architect { background-image: url('../images/ic-sm-user-architect.svg'); }
+.ic-sm-user-architect-wh { background-image: url('../images/ic-sm-user-architect-wh.svg'); }
+.ic-sm-user-pm        { background-image: url('../images/ic-sm-user-pm.svg'); }
+.ic-sm-user-pm-wh        { background-image: url('../images/ic-sm-user-pm-wh.svg'); }
 
 .ic-door-open         { background-image: url('../images/ic-md-door-open.svg'); }
 .ic-star-glow         { background-image: url('../images/ic-md-star-glow.svg'); }
